Align better with original addCertificate